--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ethers": "^5.0.32",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tilt": "^0.1.4",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1",
-    "web3": "^1.3.4"
+    "web3": "^1.3.4",
+    "web3modal": "^1.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
