--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.4",
-    "web3modal": "^1.9.3"
+    "web3-react": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
