--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^3.1.0"
+    "@openzeppelin/contracts": "^3.1.0",
+    "chai-as-promised": "^7.1.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4"
   }
 }
