--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "chai-as-promised": "^7.1.1"
   },
   "devDependencies": {
-    "chai": "^4.3.4"
+    "chai": "^4.3.4",
+    "chai-bn": "^0.2.1"
   }
 }
