--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
+    "@openzeppelin/contracts-upgradeable": "^4.0.0",
     "chai-as-promised": "^7.1.1",
     "react-markdown": "^5.0.3"
   },
