--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-markdown": "^5.0.3"
   },
   "devDependencies": {
+    "@openzeppelin/truffle-upgrades": "^1.5.2",
     "chai": "^4.3.4",
     "chai-bn": "^0.2.1"
   }
