--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-node_modules/*
-/client/node_modules/*
-/client/src/build/*
-/server/config/config.env
-/.git/MERGE_MSG
+.env
+node_modules
+client/src/build/*
+server/config/config.env
+server/server.*
