--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "client",
+  "name": "HighStreetMarket-UI",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "15.x"
+  },
   "dependencies": {
     "ethers": "^5.1.3",
     "react": "^17.0.2",
