--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
+  "name": "HighStreetMarket",
+  "version": "v1.0.0",
+  "engines": {
+    "node": "15.x"
+  },
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
     "@openzeppelin/contracts-upgradeable": "^4.0.0",
-    "chai-as-promised": "^7.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.6",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "react-markdown": "^5.0.3"
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "chai-bn": "^0.2.1"
+  },
+  "scripts": {
+    "start": "node server"
   }
 }
