--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-node_modules/*
-/client/node_modules/*
-/client/src/build/*
-/server/config/config.env
 .DS_Store
+.env
+node_modules
+client/src/build/*
+server/config/config.env
+server/server.*
