--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "node": "15.x"
   },
   "dependencies": {
+    "@makerdao/dai": "^0.32.11",
     "ethers": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
