--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
     "node": "15.x"
   },
   "dependencies": {
-    "@makerdao/dai": "^0.32.11",
     "ethers": "^5.1.3",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
