--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "node": "15.x"
   },
   "dependencies": {
-    "ethers": "5.1.3",
+    "ethers": "^5.1.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
