--- a/package.json
+++ b/package.json
@@ -17,11 +17,21 @@
     "passport-instagram-basic-api": "^1.0.0"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.1.0",
+    "@openzeppelin/test-helpers": "^0.5.11",
     "@truffle/hdwallet-provider": "^1.2.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bn": "^0.2.1",
-    "solc": "^0.8.4"
+    "ethers": "^5.1.4",
+    "hardhat": "^2.2.1",
+    "hardhat-deploy-ethers": "^0.3.0-beta.7",
+    "solc": "^0.8.4",
+    "web3": "^1.3.5"
   },
   "scripts": {
     "heroku-prebuild": "cd client; npm install --also=dev; npm run build; cd -",
