--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport-instagram-basic-api": "^1.0.0"
   },
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.11",
     "@truffle/hdwallet-provider": "^1.2.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
