--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.11",
     "@truffle/hdwallet-provider": "^1.2.2",
+    "arb-ethers-web3-bridge": "^0.7.3",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-bn": "^0.2.1",
