Rework existing pool to calculate pool using Dai
- added chainlink to calculate amount of eth converted to dai
- every price curve will be calculated using Dai
- works regarding wallets withdraw will still be needed.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": "15.x"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.1.7",
     "@openzeppelin/contracts": "^4.0.0",
     "@openzeppelin/contracts-upgradeable": "^4.0.0",
     "cookie-parser": "^1.4.5",
